bash-tools/kubernetes-configs/kong/base/kong-network-policy.yaml
#
#  Author: KhulnaSoft Ltd
#  Date: 2019-11-28 18:23:03 +0000 (Thu, 28 Nov 2019)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/KhulnaSoft/DevX/tree/main/bash-tools/kubernetes
#
#  License: see accompanying KhulnaSoft Ltd LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/company/khulnasoft
#

# ============================================================================ #
#                         Kong Admin ACL Network Policy
# ============================================================================ #

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-restriction
  namespace: kong
spec:
  podSelector:
    matchLabels:
      app: kong-kong  # XXX: yes this is really kong-kong to differentiate kong gateway proxy from kong-ingress-controller
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.0.0.0/8
        - ipBlock:
            cidr: 172.16.0.0/12
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 30001
